--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.7.7",
     "cors": "^2.8.5",
     "express": "^4.21.0",
+    "jstat": "^1.9.6",
     "mathjs": "^13.1.1",
     "multer": "^1.4.5-lts.1",
     "nodeplotlib": "^1.1.2",
